# shareqr

./: .gitignore  README.md  pyproject.toml  qr.py  upload_1765799652.tmp
shareqr/: qr.py
