[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qrtunnel"
version = "0.1"
description = "Cross-platform file sharing via SSH reverse tunneling and QR codes"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "Ani", email = "ani@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "qrcode[pil]",
]

[project.scripts]
qrtunnel = "qr:main"
